--- a/src/App.css
+++ b/src/App.css
@@ -70,11 +70,11 @@
   border-radius: 5px;
   cursor: pointer;
 }
-.MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation4.MuiAppBar-root.MuiAppBar-colorPrimary.MuiAppBar-positionStatic.css-hip9hq-MuiPaper-root-MuiAppBar-root
+/* .MuiPaper-root.MuiPaper-elevation.MuiPaper-elevation4.MuiAppBar-root.MuiAppBar-colorPrimary.MuiAppBar-positionStatic.css-hip9hq-MuiPaper-root-MuiAppBar-root
 {
   background-color: #f8eaff;
   color: black;
-}
+} */
 .slick-track{
   display: flex;
 }
