--- a/src/components/Sell/sell.css
+++ b/src/components/Sell/sell.css
@@ -6,9 +6,9 @@
   font-family: "Poppins", sans-serif;
 } */
 .body {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   min-height: 100vh;
   display: flex;
   align-items: center;
@@ -31,8 +31,8 @@
   font-weight: 500;
   text-align: center;
 }
-.form{
-    width: 95%;
+.form {
+  width: 95%;
 }
 .container .form {
   margin-top: 30px;
@@ -63,15 +63,15 @@
   display: flex;
   column-gap: 15px;
 }
-.column{
-    display: flex;
-    justify-content: space-between;
-   align-items: center;
-   width: 100%;
+.column {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  width: 100%;
 }
 .select-box select {
- width: 100%;
- height: 100%;
+  width: 100%;
+  height: 100%;
   outline: none;
   border: none;
   color: #707070;
@@ -84,7 +84,7 @@
   font-size: 1rem;
   font-weight: 400;
   margin-top: 30px;
-  margin-left: 230px ;
+  /* margin-left: 230px; */
   border: none;
   cursor: pointer;
   transition: all 0.2s ease;
@@ -92,7 +92,13 @@
 }
 .form button:hover {
   background: #f8eaff;
-  color:black;
+  color: black;
+}
+.sellsubmit{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 /*Responsive*/
 @media screen and (max-width: 500px) {
